breytingar, ekki fullkomið :(

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <td>5.000 kr.-</td>
             <td>
               <form class="add" method="post">
-                <label>Fjöldi: <input type="number" value="1" min="0" max="99"></label>
+                <label>Fjöldi: <input name="quantity" type="number" value="1" min="0" max="99"></label>
                 <button>Bæta við</button>
               </form>
             </td>
@@ -41,7 +41,7 @@
             <td>3.000 kr.-</td>
             <td>
               <form class="add" method="post">
-                <label>Fjöldi: <input type="number" value="1" min="0" max="99"></label>
+                <label>Fjöldi: <input  name="quantity" type="number" value="1" min="0" max="99"></label>
                 <button>Bæta við</button>
               </form>
             </td>
@@ -52,7 +52,7 @@
             <td><span class="price">20.000 kr.-</span></td>
             <td>
               <form class="add" method="post">
-                <label>Fjöldi: <input type="number" value="1" min="0" max="99"></label>
+                <label>Fjöldi: <input name="quantity" type="number" value="1" min="0" max="99"></label>
                 <button>Bæta við</button>
               </form>
             </td>
@@ -60,9 +60,9 @@
         </tbody>
       </table>
     </section>
-    <section>
+    <section class="cart">
       <h2>Karfa</h2>
-      <div class="cart">
+      <div class="cart-message">
         <p class="empty-message">Ekkert í körfu.</p>
         <div class="cart-content hidden">eitthvað í körfu.</div>
       </div>
@@ -78,7 +78,7 @@
           </tr>
         </thead>
         <tbody>
-          <tr data-cart-product-id="1">
+          <!--<tr data-cart-product-id="1">
             <td class="title">HTML húfa</td>
             <td class="quantity">1</td>
             <td class="price"><span class="price">5.000 kr.-</span></td>
@@ -96,7 +96,7 @@
             <td><span class="price">5.000 kr.-</span></td>
             <td></td>
           </tr>
-        </tfoot>
+        </tfoot>-->
       </table>
 
       </div>
